gramatica.txt
Terminales: KEY, KEYWORD, EQUAL, LBRACE, 
            RBRACE, LBRACKET, RBRACKET, LPAREN, 
            RPAREN, COMMA, INTEGER, FLOAT, 
            SEMICOLON, EOF

No Terminales: <inicio>, <claves>, <registros>, <funciones>

Inicio: <inicio>

Producciones:
    <inicio> ::= <claves> <registros> <funciones>

    <claves> ::= KEY EQUAL LBRACKET KEYWORD <otra_clave> RBRACKET
    <otra_clave> ::= COMMA KEYWORD <otra_clave> 
                    | ε

    <registros> ::= KEY EQUAL LBRACKET <registro> <otroRegistro> RBRACKET
    <registro> ::= LBRACE <valor> <otroValor> RBRACE
    <valor> ::= KEYWORD
                | INTEGER
                | FLOAT
    <otroValor> ::= COMMA <valor> <otroValor>
                    | ε
    <otroRegistro> ::= <registro> <otroRegistro>
                        | ε

    <funciones> ::= <funcion> <otraFuncion>
    <funcion> ::= KEY LPAREN <parametros> RPAREN SEMICOLON
    <parametros> ::= <valor> <otroParametro>
                    | ε
    <otroParametro> ::= COMMA <valor> <otroParametro>
                        | ε
    <otraFuncion> ::= <funcion> <otraFuncion>
                        | ε
